--- a/index.html
+++ b/index.html
@@ -1,68 +1,69 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <title>Pixel Farming</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="style.css" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Tap Ma Basin Monitoring Hub</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-<header class="top-bar">
-  <div class="logo">Compilation of data on the Tap Ma River basin, Rayong Province.</div>
-</header>
+    <header class="top-bar">
+        <div class="logo-container">
+            <span class="status-dot"></span>
+            <div class="logo">Tap Ma River Basin Monitoring | Rayong Live</div>
+        </div>
+    </header>
 
-<div class="app">
+    <main class="app" id="app">
+        <div class="hex-hub" id="hex-hub">
+            <svg viewBox="0 0 300 300" id="hex-svg">
+                <defs>
+                    <pattern id="radar" patternUnits="userSpaceOnUse" width="300" height="300"><image href="pexels-ray-strassburger-2735117-13866733.jpg" width="300" height="300" preserveAspectRatio="xMidYMid slice" /></pattern>
+                    <pattern id="water" patternUnits="userSpaceOnUse" width="300" height="300"><image href="pexels-pixabay-459451.jpg" width="300" height="300" preserveAspectRatio="xMidYMid slice" /></pattern>
+                    <pattern id="forecast" patternUnits="userSpaceOnUse" width="300" height="300"><image href="pexels-ltfkxx99-35237805.jpg" width="300" height="300" preserveAspectRatio="xMidYMid slice" /></pattern>
+                    <pattern id="tides" patternUnits="userSpaceOnUse" width="300" height="300"><image href="pexels-rickyrecap-1784712.jpg" width="300" height="300" preserveAspectRatio="xMidYMid slice" /></pattern>
+                    <pattern id="earthquake" patternUnits="userSpaceOnUse" width="300" height="300"><image href="pexels-jan-schwebel-716712998-30190705.jpg" width="300" height="300" preserveAspectRatio="xMidYMid slice" /></pattern>
+                    <pattern id="air" patternUnits="userSpaceOnUse" width="300" height="300"><image href="pexels-pixabay-257775.jpg" width="300" height="300" preserveAspectRatio="xMidYMid slice" /></pattern>
+                </defs>
 
-  <div class="hex-hub">
-    <svg viewBox="0 0 300 300">
-<defs>
-<pattern id="rainRadarPattern" patternUnits="userSpaceOnUse" width="300" height="300">
-  <image href="pexels-ray-strassburger-2735117-13866733.jpg" x="0" y="0" width="300" height="300" preserveAspectRatio="xMidYMid slice" />
-</pattern>
+                <g class="hex-group" data-page="rainRadar">
+                    <polygon class="hex-face" points="150,20 40,85 150,150" fill="url(#radar)" />
+                    <text x="95" y="85" class="hex-icon-label">RADAR</text>
+                </g>
+                <g class="hex-group" data-page="rainfallVolume">
+                    <polygon class="hex-face" points="150,20 260,85 150,150" fill="url(#water)" />
+                    <text x="205" y="85" class="hex-icon-label">WATER</text>
+                </g>
+                <g class="hex-group" data-page="rainForecast">
+                    <polygon class="hex-face" points="260,85 260,215 150,150" fill="url(#forecast)" />
+                    <text x="210" y="155" class="hex-icon-label">FORECAST</text>
+                </g>
+                <g class="hex-group" data-page="seaTides">
+                    <polygon class="hex-face" points="260,215 150,280 150,150" fill="url(#tides)" />
+                    <text x="205" y="225" class="hex-icon-label">TIDES</text>
+                </g>
+                <g class="hex-group" data-page="earthquakeReports">
+                    <polygon class="hex-face" points="150,280 40,215 150,150" fill="url(#earthquake)" />
+                    <text x="95" y="225" class="hex-icon-label">QUAKE</text>
+                </g>
+                <g class="hex-group" data-page="airQualityPM25">
+                    <polygon class="hex-face" points="40,215 40,85 150,150" fill="url(#air)" />
+                    <text x="90" y="155" class="hex-icon-label">PM 2.5</text>
+                </g>
+            </svg>
+            <div class="hover-label" id="hover-label">SELECT MONITORING CATEGORY</div>
+        </div>
 
- <pattern id="rainfallVolumePattern" patternUnits="userSpaceOnUse" width="300" height="300">
-  <image href="pexels-pixabay-459451.jpg" x="0" y="0" width="300" height="300" preserveAspectRatio="xMidYMid slice" />
-</pattern>
+        <aside class="panel" id="panel">
+            <div class="panel-header">
+                <h2 id="panel-title">Data Source</h2>
+                <button class="close-btn" id="close">CLOSE ✕</button>
+            </div>
+            <div id="panel-content"></div>
+        </aside>
+    </main>
 
-<pattern id="rainForecastPattern" patternUnits="userSpaceOnUse" width="300" height="300">
-  <image href="pexels-ltfkxx99-35237805.jpg" x="0" y="0" width="300" height="300" preserveAspectRatio="xMidYMid slice" />
-</pattern>
-
-<pattern id="seaTidesPattern" patternUnits="userSpaceOnUse" width="300" height="300">
-  <image href="pexels-rickyrecap-1784712.jpg" x="0" y="0" width="300" height="300" preserveAspectRatio="xMidYMid slice" />
-</pattern>
-
-<pattern id="earthquakeReportsPattern" patternUnits="userSpaceOnUse" width="300" height="300">
-  <image href="pexels-jan-schwebel-716712998-30190705.jpg" x="0" y="0" width="300" height="300" preserveAspectRatio="xMidYMid slice" />
-</pattern>
-
-<pattern id="airQualityPM25Pattern" patternUnits="userSpaceOnUse" width="300" height="300">
-  <image href="pexels-pixabay-257775.jpg" x="0" y="0" width="300" height="300" preserveAspectRatio="xMidYMid slice" />
-</pattern>
-
-</defs>
-
-
-      <!-- Hexes -->
-      <polygon class="hex-face" data-page="rainRadar" points="150,20 40,85 150,150" fill="url(#rainRadarPattern)" />
-<polygon class="hex-face" data-page="rainfallVolume" points="150,20 260,85 150,150" fill="url(#rainfallVolumePattern)" />
-<polygon class="hex-face" data-page="rainForecast" points="260,85 260,215 150,150" fill="url(#rainForecastPattern)" />
-<polygon class="hex-face" data-page="seaTides" points="260,215 150,280 150,150" fill="url(#seaTidesPattern)" />
-<polygon class="hex-face" data-page="earthquakeReports" points="150,280 40,215 150,150" fill="url(#earthquakeReportsPattern)" />
-<polygon class="hex-face" data-page="airQualityPM25" points="40,215 40,85 150,150" fill="url(#airQualityPM25Pattern)" />
-
-
-    </svg>
-  </div>
-
-  <div class="panel" id="panel">
-    <button class="close-btn" id="close">✕</button>
-    <div id="panel-content"></div>
-  </div>
-
-</div>
-
-<script src="script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
