--- a/index.html
+++ b/index.html
@@ -8,12 +8,16 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header class="top-bar">
-        <div class="logo-container">
-            <span class="status-dot"></span>
-            <div class="logo">Tap Ma River Basin Monitoring | Live Portal</div>
+<header class="top-bar">
+    <div class="logo-container">
+        <span class="status-dot"></span>
+        <div class="logo">Tap Ma River Basin Monitoring | Live Portal</div>
+        <div class="visitor-counter">
+            <span class="v-label">TOTAL ACCESS:</span>
+            <span id="v-count">LOADING...</span>
         </div>
-    </header>
+    </div>
+</header>
 
     <main class="app" id="app">
         <div class="hex-hub" id="hex-hub">
