--- a/index.html
+++ b/index.html
@@ -62,7 +62,14 @@
             </div>
             <div id="panel-content"></div>
         </aside>
+        
     </main>
+
+<div class="counter-footer">
+        <a href="https://www.hitwebcounter.com/" target="_blank">
+            <img src="https://hitwebcounter.com/counter/counter.php?page=21469933&style=0036&nbdigits=7&type=page&initCount=0" title="Free Tools" Alt="Free Tools" border="0" />
+        </a>
+    </div>
 
     <script src="script.js"></script>
 </body>
